--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 #nav {
-  padding: 30px;
+  padding: 1rem;
 }
 
 #nav a {
@@ -17,4 +17,8 @@
 
 #nav a.router-link-exact-active {
   color: #42b983;
+}
+
+body {
+  margin: 0;
 }
