--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -4,6 +4,10 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
+  background: #5491ce; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #5491ce, #fd746c); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #5491ce, #fd746c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height:100vh;
 }
 
 #nav {
